--- a/views/layout.pug
+++ b/views/layout.pug
@@ -43,7 +43,7 @@ html
                     input.form-control.mr-sm-2(name='searchString' type='text' placeholder='Search' aria-label='Search')
                     button.btn.btn-secondary.my-2.my-sm-0(type='submit')
                         span.fa.fa-search
-                                
+                | &nbsp;&nbsp;
                 form.form-inline.my-2.my-lg-0(action='/auth/logout' method='GET')
                     button.btn.btn-secondary.my-2.my-sm-0(type='submit')
                         span.fa.fa-sign-out-alt
