--- a/views/ratings.pug
+++ b/views/ratings.pug
@@ -2,6 +2,8 @@ extends layout
 
 block content
   div.my-3.p-3.bg-white.rounded.shadow-sm
+    if ratings.length == 0
+      h5 Sorry, no results were found
     ul.list-group
       each rating in ratings
         li.list-group-item
