--- a/views/loginLayout.pug
+++ b/views/loginLayout.pug
@@ -8,7 +8,8 @@ html(lang="en")
         main.container-fluid
             .row.justify-content-center
                 .col-12.col-sm-6.col-md-3
-                    .my-3.p-3.bg-white.rounded.shadow-sm
+                    div.my-3.p-3.bg-white.rounded.shadow-sm
+                        h5.text-center.border-bottom.border-gray.pb-2.mb-0 Please Register/Login to continue
                         block content
 
         script(src="/bower_components/jquery/dist/jquery.js")
