--- a/views/ratings.pug
+++ b/views/ratings.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content
   div.my-3.p-3.bg-white.rounded.shadow-sm
+    h3.border-bottom.border-gray.pb-2.mb-0 #{header}
     if ratings.length == 0
       h5 Sorry, no results were found
     ul.list-group
