--- a/views/ratings.pug
+++ b/views/ratings.pug
@@ -1,13 +1,12 @@
 extends layout
 
 block content
-  div.my-3.p-3.bg-white.rounded.shadow-sm
-    h3.border-bottom.border-gray.pb-2.mb-0 #{header}
-    if ratings.length == 0
-      h5 Sorry, no results were found
-    ul.list-group
-      each rating in ratings
-        li.list-group-item
-          b(style = 'padding-right: 2em;')= rating.rating
-          img(src=rating.movie.poster style = 'width: 5%; border-radius: 5%;')
-          a(href="/movies/id/"+rating.movie.id, style = 'padding-left: 5em;')= rating.movie.title       
+	if ratings.length == 0
+		h5 Sorry, no results were found
+	else 
+		ul.list-group
+			each rating in ratings
+				li.list-group-item
+					b(style = 'padding-right: 2em;')= rating.rating
+					img(src=rating.movie.poster style = 'width: 5%; border-radius: 5%;')
+					a(href="/movies/id/"+rating.movie.id, style = 'padding-left: 5em;')= rating.movie.title 
